messing around with icons

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 
 <ul id="navigationMenu">
     <li>
-	    <a class="packages" href="#">
+	    <a class="services" href="#">
             <span>R packages</span>
         </a>
     </li>
     
     <li>
-    	<a class="datasets" href="#">
+    	<a class="about" href="#">
             <span>Datasets</span>
         </a>
     </li>
     
     <li>
-	     <a class="manuscripts" href="#">
+	     <a class="portfolio" href="#">
             <span>Related manuscripts</span>
          </a>
     </li>
