--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1>Menu of various R-based tools and datasets for trait-based ecology and evolution</h1>
+<h1>A toolbox of software and datasets for trait-based ecology and evolution</h1>
 
 
 <div id="main">
