--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     
 </div>
 
-<p class="note">If you'd like to add your tool to this menu, please get in touch</p>
+<p class="note">
+This is not meant to be comprehensive.  This is just some stuff we made.
+If you'd like to add your tool to this menu, please get in touch</p>
 
 </body>
 </html>
