--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <td><big>Paper</big></td>
     <td><big>Maintainer</big></td>
   </tr>
+     <tr>
+    <td><a href="http://www.github.com/traitecoevo/plant">plant</a></td>
+    <td>Dynamics of forest trait ecology and evolution</td> 
+    <td><a href="http://www.github.com/traitecoevo/plant_paper">Methods in Ecology and Evolution</a></td>
+    <td><a href="http://www.danielfalster.com"> </a> Dan Falster </td>
+  </tr>
   <tr>
     <td><a href="http://www.github.com/traitecoevo/taxonlookup">taxonlookup</a></td>
     <td>A versioned taxonomic lookup table for land plants</td> 
@@ -27,35 +33,34 @@
     <tr>
     <td><a href="http://www.github.com/traitecoevo/phyndr">phyndr</a></td>
     <td>An algorithm to maximize the overlap between traits and phylogenies</td> 
-    <td><a href="http://www.github.com/traitecoevo/taxonlookup">Methods in Ecology and Evolution</a></td>
+    <td><a href="http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12517/abstract">Methods in Ecology and Evolution</a></td>
     <td><a href="http://mwpennell.github.io/"> Matt Pennell</a></td>
   </tr>
       <tr>
-    <td><a href="http://www.github.com/traitecoevo/BAAD-data">BAAD-data</a></td>
-    <td>A giant database of plant allometry</td> 
-    <td><a href="http://www.github.com/traitecoevo/taxonlookup">Ecological Data</a></td>
-    <td><a href="http://www.willcornwell.org"> Dan Falster</a></td>
+    <td><a href="http://www.github.com/traitecoevo/baad.data">BAAD-data</a></td>
+    <td>BAAD: a Biomass And Allometry Database for woody plants</td> 
+    <td><a href="http://doi.org/10.1890/14-1889.1">Ecology</a></td>
+    <td><a href="http://www.danielfalster.com"> Daniel Falster</a></td>
   </tr>
     <tr>
-    <td><a href="www.github.com/traitecoevo/arbutus">arbutus</a></td>
+    <td><a href="http://www.github.com/mwpennell/arbutus">arbutus</a></td>
     <td>Assessing the adequacy for models of trait evolution</td> 
     <td><a href="http://www.jstor.org/stable/full/10.1086/682022">American Naturalist</a></td>
     <td><a href="http://mwpennell.github.io/"> Matt Pennell</a></td>
   </tr>
       <tr>
-    <td><a href="www.github.com/richfitz/ksi">ksi</a></td>
+    <td><a href="http://www.github.com/richfitz/ksi">ksi</a></td>
     <td>Identifying distinctive clades with respect to traits</td> 
-    <td><a href="http://www.github.com/traitecoevo/taxonlookup">Journal of Ecology</a></td>
-    <td><a href="http://www.willcornwell.org"> </a></td>
+    <td><a href="http://doi.org/10.1111/1365-2745.12208">Journal of Ecology</a></td>
+    <td><a href="http://www.willcornwell.org"> </a> Will Cornwell </td>
   </tr>
         <tr>
     <td><a href="http://www.github.com/richfitz/traitfill">traitfill</a></td>
     <td>Estimating the state of unsampled species for binary traits</td> 
-    <td><a href="http://www.github.com/traitecoevo/taxonlookup">Journal of Ecology</a></td>
-    <td><a href="http://www.willcornwell.org"> </a></td>
+    <td><a href="http://doi.org/10.1111/1365-2745.12260">Journal of Ecology</a></td>
+    <td><a href="http://www.willcornwell.org"> </a> Will Cornwell </td>
   </tr>
 
-  
   </table>
   
 <h2> Repositories supporting specific papers </h2>
