--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1> traitecoevo: a collection of tools for trait-based ecology and evolution</h1>
 
-<h2>R Packages (including data packages)</h2>
+<h2>traitecoevo R Packages (including data packages)</h2>
 
 <table>
   <tr>
@@ -18,11 +18,12 @@
     <td><big>Paper</big></td>
     <td><big>Maintainer</big></td>
   </tr>
+
      <tr>
     <td><a href="http://www.github.com/traitecoevo/plant">plant</a></td>
     <td>Dynamics of forest trait ecology and evolution</td> 
     <td><a href="http://www.github.com/traitecoevo/plant_paper">Methods in Ecology and Evolution</a></td>
-    <td><a href="http://www.danielfalster.com"> </a> Dan Falster </td>
+    <td><a href="http://www.danielfalster.com"> Dan Falster </a> </td>
   </tr>
   <tr>
     <td><a href="http://www.github.com/traitecoevo/taxonlookup">taxonlookup</a></td>
@@ -37,7 +38,7 @@
     <td><a href="http://mwpennell.github.io/"> Matt Pennell</a></td>
   </tr>
       <tr>
-    <td><a href="http://www.github.com/traitecoevo/baad.data">BAAD-data</a></td>
+    <td><a href="http://www.github.com/traitecoevo/baad.data">baad.data</a></td>
     <td>BAAD: a Biomass And Allometry Database for woody plants</td> 
     <td><a href="http://doi.org/10.1890/14-1889.1">Ecology</a></td>
     <td><a href="http://www.danielfalster.com"> Daniel Falster</a></td>
@@ -52,18 +53,20 @@
     <td><a href="http://www.github.com/richfitz/ksi">ksi</a></td>
     <td>Identifying distinctive clades with respect to traits</td> 
     <td><a href="http://doi.org/10.1111/1365-2745.12208">Journal of Ecology</a></td>
-    <td><a href="http://www.willcornwell.org"> </a> Will Cornwell </td>
+    <td><a href="http://www.willcornwell.org">  Will Cornwell </a></td>
   </tr>
         <tr>
     <td><a href="http://www.github.com/richfitz/traitfill">traitfill</a></td>
     <td>Estimating the state of unsampled species for binary traits</td> 
     <td><a href="http://doi.org/10.1111/1365-2745.12260">Journal of Ecology</a></td>
-    <td><a href="http://www.willcornwell.org"> </a> Will Cornwell </td>
+    <td><a href="http://www.willcornwell.org">  Will Cornwell </a></td>
   </tr>
 
   </table>
   
-<h2> Repositories supporting specific papers </h2>
+
+  
+<h2> repositories supporting specific papers </h2>
   <table>
    <tr>
     <td><big>Short title</big></td>
@@ -103,6 +106,43 @@
   </tr>
   
 </table>
+
+  <h2>infrastructure R Packages</h2>
+  
+  <table>
+   <tr>
+    <td><big>Package name</big></td>
+    <td><big>Description</big></td> 
+    <td><big>Maintainer</big></td>
+  </tr>
+
+
+ <td><a href="http://www.github.com/richfitz/remake">remake</a></td>
+    <td>Package for managing (and reproducing) R-based workflows</td> 
+    <td><a href="http://richfitz.github.io/"> Rich FitzJohn </a> </td>
+  </tr>
+    <tr>
+    <td><a href="http://www.github.com/traitecoevo/dockertest">dockertest</a></td>
+    <td>Build docker containers for R projects</td> 
+    <td><a href="http://richfitz.github.io/"> Rich FitzJohn </a> </td>
+  </tr>
+    <tr>
+    <td><a href="http://www.github.com/traitecoevo/rrqueue">rrqueue</a></td>
+    <td>Distributed task queue for R</td> 
+    <td><a href="http://richfitz.github.io/"> Rich FitzJohn </a> </td>
+  </tr>
+    <tr>
+    <td><a href="http://www.github.com/traitecoevo/stateliner">stateliner</a></td>
+    <td>Interface to the Bayesian engine stateline</td> 
+    <td><a href="http://www.danielfalster.com"> Daniel Falster </a> </td>
+  </tr>
+   <tr>
+    <td><a href="http://www.github.com/traitecoevo/callr">callr</a></td>
+    <td>A way to call R from other programs and calling other programs from R</td> 
+    <td><a href="http://richfitz.github.io/"> Rich FitzJohn </a> </td>
+  </tr>
+  </table> 
+
 
 <p class="note">
 This is not meant to be comprehensive.  This is just some stuff we made.
