Add new references

--- a/index.html
+++ b/index.html
@@ -92,6 +92,24 @@
     <td>All analyses and ms</td>
     <td>Low</td>
   </tr>
+  </tr>
+    <tr>
+    <td><a href="https://github.com/RemkoDuursma/baadanalysis">Analysis of BAAD</a></td>
+    <td>Duursma & Falster</td>
+    <td>2016</td>
+    <td><a href="https://github.com/RemkoDuursma/baadanalysis">New Phytologist</a></td>
+     <td>All analyses and ms</td>
+    <td> Low </td>
+  </tr>
+  </tr>
+    <tr>
+    <td><a href="https://github.com/AnaisGibert/Growth_trait_metaanalysis">Effect of traits on plant growth</a></td>
+    <td>Gibert, Falster, et al.</td>
+    <td>2016</td>
+    <td><a href="https://github.com/AnaisGibert/Growth_trait_metaanalysis">Journal of Ecology</a></td>
+     <td>All analyses and ms</td>
+    <td> Low </td>
+  </tr>
   <tr>
     <td><a href="https://github.com/wcornwell/gymnoLitterFires">Effects of litter traits on surface fires</a></td> 
     <td>Cornwell et al.</td>
