Add new references & better titles

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ This is not meant to be a comprehensive overview of ALL relevant tools, or all o
     <td><big>Complexity of analysis</big></td>
   </tr>
     <tr>
-    <td><a href="http://www.github.com/traitecoevo/plant_paper">Paper about plant</a></td>
+    <td><a href="http://www.github.com/traitecoevo/plant_paper">Plant: package for modelling forest trait ecology and evolution </a></td>
     <td>Falster, FitzJohn, et al.</td>
     <td>2016</td>
     <td><a href="http://doi.org/10.1111/2041-210X.12525">Methods in Ecology & Evolution</a></td>
@@ -92,7 +92,7 @@ This is not meant to be a comprehensive overview of ALL relevant tools, or all o
     <td> Medium </td>
   </tr>
     <tr>
-    <td><a href="http://www.github.com/traitecoevo/phyndr-ms">Paper about phyndr</a></td> 
+    <td><a href="http://www.github.com/traitecoevo/phyndr-ms">Maximizing the overlap of phylogenetic and comparative data</a></td>
     <td>Pennell, FitzJohn, Cornwell</td>
     <td>2016</td>
     <td><a href="http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12517/abstract"> Methods in Ecology & Evolution</a></td>
@@ -101,7 +101,7 @@ This is not meant to be a comprehensive overview of ALL relevant tools, or all o
   </tr>
   </tr>
     <tr>
-    <td><a href="https://github.com/RemkoDuursma/baadanalysis">Analysis of BAAD</a></td>
+    <td><a href="https://github.com/RemkoDuursma/baadanalysis">Leaf mass per area drives differences biomass distribution</a></td>
     <td>Duursma & Falster</td>
     <td>2016</td>
     <td><a href="https://github.com/RemkoDuursma/baadanalysis">New Phytologist</a></td>
@@ -110,7 +110,7 @@ This is not meant to be a comprehensive overview of ALL relevant tools, or all o
   </tr>
   </tr>
     <tr>
-    <td><a href="https://github.com/AnaisGibert/Growth_trait_metaanalysis">Effect of traits on plant growth</a></td>
+    <td><a href="https://github.com/AnaisGibert/Growth_trait_metaanalysis">On the link between functional traits and growth rate</a></td>
     <td>Gibert, Falster, et al.</td>
     <td>2016</td>
     <td><a href="https://github.com/AnaisGibert/Growth_trait_metaanalysis">Journal of Ecology</a></td>
@@ -134,7 +134,7 @@ This is not meant to be a comprehensive overview of ALL relevant tools, or all o
     <td>High</td>
   </tr>
   <tr>
-    <td><a href="https://github.com/richfitz/modeladequacy">Adequacy of trait evolution models</a></td> 
+    <td><a href="https://github.com/richfitz/modeladequacy">Adequacy of trait evolution models</a></td>
     <td>Pennell, FitzJohn,Cornwell et al</td>
     <td>2015</td>
     <td><a href="http://www.jstor.org/stable/full/10.1086/682022"> American Naturalist</a></td>
@@ -142,18 +142,25 @@ This is not meant to be a comprehensive overview of ALL relevant tools, or all o
     <td>Medium</td>
   </tr>
   <tr>
-  <tr>
-    <td><a href="https://github.com/richfitz/wood">How much of the world is woody</a></td>
-    <td>FitzJohn, Pennell, Cornwell et al.</td>
-    <td>2014</td>
-     <td><a href="http://onlinelibrary.wiley.com/store/10.1111/1365-2745.12260/asset/jec12260.pdf"> Journal of Ecology</a></td>
+    <td><a href="https://github.com/dfalster/Wenk_RA_review"> Quantifying reproductive allocation schedules in plants</a></td>
+    <td>Wenk & Falster</td>
+    <td>2015</td>
+     <td><a href="http://doi.org/10.1002/ece3.1802">Ecology & Evolution</a></td>
     <td>All analyses & ms</td>
-    <td>Medium</td>
-  </tr>    <td><a href="https://github.com/dfalster/Westoby_2012_JTB_sapwood_model">
-Optimal wood per leaf area </a></td> 
+    <td>Low</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/dfalster/Westoby_2012_JTB_sapwood_model"> Optimal sapwood cross section in relation to leaf area</a></td>
     <td>Westoby, Cornwell, Falster</td>
     <td>2012</td>
     <td><a href="http://doi.org/10.1016/j.jtbi.2012.03.008"> Journal of Theoretical Biology</a></td>
+    <td>All analyses & figures</td>
+    <td>Low</td>
+  </tr>
+    <td><a href="https://github.com/dfalster/Westoby_2012_JTB_sapwood_model"> General model for the scaling of offspring and adult size </a></td>
+    <td>Falster et al</td>
+    <td>2008</td>
+    <td><a href="http://dx.doi.org/10.1086/589889"> The American Naturalist</a></td>
     <td>All analyses & figures</td>
     <td>Low</td>
   </tr>
